# Acvocat

./: .gitignore  README.md  config.php  index.html  index.php  pyproject.toml  script.js  script.php  styles.css  test.php
email_service/builder/: request_builder.py
email_service/controller/: __init__.py  requestcontroller.py
email_service/exception/: __init__.py  empty_environment_exception.py  not_founded_environment_key.py
email_service/models/: email_topics.py  requestdto.py
email_service/service/: html_content_service.py  mail_service.py
pages/: forms.py  urls.py  views.py
siteProject/: asgi.py  settings.py  urls.py  wsgi.py
src/main/python/ru/iamlukovkin/acvocat/: application.py  manage.py
src/main/python/ru/iamlukovkin/database/: __init__.py  abstract_entity.py  primary_key.py
src/main/python/ru/iamlukovkin/email/: __init__.py  html_mail_builder.py  mail_sender.py
src/main/python/ru/iamlukovkin/models/: request.py  user.py
src/main/python/ru/iamlukovkin/path_resolver/: __init__.py  pathresolver.py
src/main/python/ru/krovlDem/pages/: __init__.py  apps.py  tests.py  urls.py  views.py
src/main/resources/database/: application.yaml
src/main/resources/static/css/: styles.css
src/main/resources/static/js/: script.js
src/main/resources/templates/: index.html  styles.css
src/test/python/: test_application.py  test_pathresolver.py
static/assets/mobirise/css/: mbr-additional.css
templates/: index.html
templates/assets/formoid/: formoid.min.js
templates/assets/images/: hashes.json
web/: advocat.html
web/assets/theme/js/: script.js
(+23 files in other folders)
