[tool.poetry]
name = "acvocat"
version = "0.1.0"
description = ""
authors = ["Ivan Lukovkin <121473397+iamlukovkin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
setuptools = "^75.1.0"
python-dotenv = "^1.0.1"
redmail = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
